# DigitVA

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Makefile  boot.sh  config.py  docker-compose.override.yml  docker-compose.yml  handoff.md  make_celery.py  pyproject.toml  requirements.txt  run.py
.beads/: .gitignore  metadata.json
.beads/dolt-corrupt-20260314-1928/: .beads-credential-key
.tasks/: 2026-04-13-smartva-kb-expand-symptom-traces.md  README.md  dm-user-management.md  kpis-policy.md  legacy-attachment-repair-coverage.md  odk-connection-cooldown-and-pacing.md  odk-payload-version-sync-cutover.md  smartva-batch-processing.md  workflow-bpmn-refactor-plan.md
app/: __init__.py
docs/: README.md  icd-10-CODES.csv
scripts/: analyze_sql_log.py  backfill_smartva_current_outputs.py  benchmark_smartva_batches.py  check_attachment_integrity.py  manual-db-dump.sh  manual-db-restore.sh  migrate_attachment_storage_names.py  restore-test-db.sh  run_smartva_offline_by_project.py  setup-ffmpeg.sh  smartva_richness_assessment.py  sync_smartva_package_data.py  wait-for-celery-beat-db.sh
tests/: base.py  conftest.py  test_admin_api.py  test_admin_shell.py  test_attachments_section_template.py  test_auth_grants.py  test_category_table_sections_template.py  test_check_attachment_integrity.py  test_dm_manage.py  test_health_history_summary_template.py  test_logging_context.py  test_media_access.py  test_odk_connections.py  test_password_policy.py  test_profile.py  test_rate_limiting.py  test_request_method_abuse_control.py  test_security_headers.py  test_session.py  test_smartva_richness_assessment.py  test_sync_tasks_attachment_repair.py  test_user_cli.py  test_va_auth.py
(+658 files in other folders)
