[project]
name = "digitva"
version = "0.1.0"
description = "DigitVA - Digital Verbal Autopsy System"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.14.0",
    "blinker>=1.9.0",
    "cryptography>=42.0.0",
    "email_validator>=2.2.0",
    "Flask>=3.1.0",
    "Flask-Login>=0.6.3",
    "Flask-Migrate>=4.1.0",
    "Flask-SQLAlchemy>=3.1.1",
    "Flask-WTF>=1.2.2",
    "numpy>=2.2.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.0",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
    "pyodk==1.2.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "SQLAlchemy>=2.0.0",
    "Werkzeug>=3.1.0",
    "WTForms>=3.2.0",
    "gunicorn>=23.0.0",
    "celery>=5.6.2",
    "redis>=7.3.0",
    "sqlalchemy-celery-beat>=0.8.4",
    "flask-session>=0.8.0",
    "Flask-Limiter==4.1.1",
    "Flask-Talisman>=1.1.0",
    "flask-caching>=2.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["app"]

[tool.uv]
override-dependencies = ["pydantic>=2.12.5"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-p no:xdist"
filterwarnings = [
    "ignore::DeprecationWarning",
]
